--- a/addons/kube-prometheus-stack-app.yaml
+++ b/addons/kube-prometheus-stack-app.yaml
@@ -12,15 +12,12 @@ spec:
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 55.4.0
     helm:
+      # Reference values file from an external path
       valueFiles:
-        - values.yaml
-      # You can still include some critical values here if needed
-      values: |
-        crds:
-          create: true
+        - ../values/kube-prometheus-stack-values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: kube-prometheus-stack
+    namespace: monitoring
   syncPolicy:
     automated: 
       prune: true
