--- a/addons/kube-prometheus-stack-app.yaml
+++ b/addons/kube-prometheus-stack-app.yaml
@@ -3,8 +3,6 @@ kind: Application
 metadata:
   name: kube-prometheus-stack
   namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-wave: "0"
 spec:
   project: default
   source:
@@ -12,16 +10,8 @@ spec:
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 55.4.0
     helm:
-      # Reference values file from an external path
       valueFiles:
-        - https://github.com/markbosire/gitops-repo/values/kube-prometheus-stack-values.yaml
+        - /values/kube-prometheus-stack-values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
-  syncPolicy:
-    automated: 
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
-      - ServerSideApply=true
