--- a/addons/kube-prometheus-stack-app.yaml
+++ b/addons/kube-prometheus-stack-app.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: 55.4.0
     helm:
       valueFiles:
-        - kube-prometheus-stack-values.yaml
+        - values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
