--- a/addons/kube-prometheus-stack-app.yaml
+++ b/addons/kube-prometheus-stack-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kube-prometheus-stack
+  name: kube-prometheus-stack-crds
   namespace: argocd
 spec:
   project: default
@@ -10,6 +10,36 @@ spec:
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 55.4.0
     helm:
+      skipCrds: false
+      # Only install CRDs - no values file needed
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: monitoring
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+    # Add this to ensure CRDs are applied first
+    automated:
+      prune: false
+      selfHeal: true
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: kube-prometheus-stack
+  namespace: argocd
+  annotations:
+    # This ensures it runs after the CRDs are installed
+    argocd.argoproj.io/sync-wave: "1"
+spec:
+  project: default
+  source:
+    chart: kube-prometheus-stack
+    repoURL: https://prometheus-community.github.io/helm-charts
+    targetRevision: 55.4.0
+    helm:
+      # Skip CRDs on this application since they're handled separately
+      skipCrds: true 
       valueFiles:
         - values.yaml
   destination:
@@ -18,3 +48,9 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
+  # Add dependency on the CRDs app
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jsonPointers:
+        - /metadata/annotations
